# scribe

./: .gitignore  CMakeLists.txt  configure.ac  configure.py
cmake/: CMakeLists.txt  Common.cmake  FindThrift.cmake  LintelFind.cmake  Thrift.cmake  UnitTesting.cmake  Utils.cmake  dummy.cpp
debian/: changelog  control  limits  preinst  rules  scribe.init.d
examples/: s3_example.conf  scribe_apache
if/: scribe.thrift
src/: CMakeLists.txt  HdfsFile.cpp  Makefile.am  S3File.cpp  S3File.h  common.h  env_default.h  file.cpp  store.cpp  version.h.in
